scripts/nullness/annotator/url80e7c3d65d_sblit_dcl_tgz-pJ8-org_dclayer_DCLJ8.txt
../annotator/url80e7c3d65d_sblit_dcl_tgz-pJ8-org_dclayer_DCLJ8/src/org/dclayer/datastructure/tree/FinalTreeNode.java:4: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url80e7c3d65d_sblit_dcl_tgz-pJ8-org_dclayer_DCLJ8/src/org/dclayer/net/interservice/InterservicePolicy.java:13: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url80e7c3d65d_sblit_dcl_tgz-pJ8-org_dclayer_DCLJ8/src/org/dclayer/net/a2s/rev0/message/ApplicationChannelIncomingRequestMessage.java:16: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url80e7c3d65d_sblit_dcl_tgz-pJ8-org_dclayer_DCLJ8/src/org/dclayer/net/a2s/rev0/message/ApplicationChannelAcceptMessage.java:16: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url80e7c3d65d_sblit_dcl_tgz-pJ8-org_dclayer_DCLJ8/src/org/dclayer/net/CryptoPacketComponent.java:9: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url80e7c3d65d_sblit_dcl_tgz-pJ8-org_dclayer_DCLJ8/src/org/dclayer/net/packetcomponent/AutoPacketComponentChildInfo.java:6: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url80e7c3d65d_sblit_dcl_tgz-pJ8-org_dclayer_DCLJ8/src/org/dclayer/net/component/KeyEncryptedPayload.java:13: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url80e7c3d65d_sblit_dcl_tgz-pJ8-org_dclayer_DCLJ8/src/org/dclayer/datastructure/tree/FinalTreeNode.java:32: error: cannot find symbol
	@Initializer @Override
	 ^
  symbol:   class Initializer
  location: class FinalTreeNode<T>
  where T is a type-variable:
    T extends Object declared in class FinalTreeNode
../annotator/url80e7c3d65d_sblit_dcl_tgz-pJ8-org_dclayer_DCLJ8/src/org/dclayer/net/interservice/InterservicePolicy.java:68: error: cannot find symbol
	@Initializer public InterservicePolicy requestApplicationChannel(ApplicationChannel applicationChannel) {
	 ^
  symbol:   class Initializer
  location: class InterservicePolicy
../annotator/url80e7c3d65d_sblit_dcl_tgz-pJ8-org_dclayer_DCLJ8/src/org/dclayer/net/a2s/rev0/message/ApplicationChannelAcceptMessage.java:28: error: cannot find symbol
	@Initializer @Override
	 ^
  symbol:   class Initializer
  location: class ApplicationChannelAcceptMessage
../annotator/url80e7c3d65d_sblit_dcl_tgz-pJ8-org_dclayer_DCLJ8/src/org/dclayer/net/a2s/rev0/message/ApplicationChannelIncomingRequestMessage.java:27: error: cannot find symbol
	@Initializer @Override
	 ^
  symbol:   class Initializer
  location: class ApplicationChannelIncomingRequestMessage
../annotator/url80e7c3d65d_sblit_dcl_tgz-pJ8-org_dclayer_DCLJ8/src/org/dclayer/net/CryptoPacketComponent.java:32: error: cannot find symbol
	@Initializer @Override
	 ^
  symbol:   class Initializer
  location: class CryptoPacketComponent
../annotator/url80e7c3d65d_sblit_dcl_tgz-pJ8-org_dclayer_DCLJ8/src/org/dclayer/net/packetcomponent/AutoPacketComponentChildInfo.java:18: error: cannot find symbol
	@Initializer public void setField(Field field, Object object) {
	 ^
  symbol:   class Initializer
  location: class AutoPacketComponentChildInfo<T>
  where T is a type-variable:
    T extends PacketComponentI declared in class AutoPacketComponentChildInfo
../annotator/url80e7c3d65d_sblit_dcl_tgz-pJ8-org_dclayer_DCLJ8/src/org/dclayer/net/component/KeyEncryptedPayload.java:85: error: cannot find symbol
	@Initializer @Override
	 ^
  symbol:   class Initializer
  location: class KeyEncryptedPayload
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
14 errors
